--- a/assets/css/appResume/premium/sections/_nav.scss
+++ b/assets/css/appResume/premium/sections/_nav.scss
@@ -9,7 +9,7 @@
 
     &__container {
         @extend .pos-rel;
-        @extend .flex-row-left-center;
+        @extend .flex-centered;
     }
     &__slider {
         @include accelerate();
