--- a/assets/templates/appResume/basic/templates/template1.html
+++ b/assets/templates/appResume/basic/templates/template1.html
@@ -1,7 +1,7 @@
 <resume-basic-template1 id="t1">
 
 	<div id="t-header">
-		<div if={ $resume.get('commons', 'contacts', 'city') } id="t-header-city">{ $resume.get('commons', 'contacts', 'city') }</div>
+		<div if={ $resume.get('commons', 'contacts', 'city') } id="t-header-city">{ $resume.get('commons', 'contacts', 'city', 'name') }</div>
 		<div id="t-header-names">
 			<div if={ $resume.get('commons', 'surname').length > $resume.get('commons', 'name').length }>
 				<div id="t-header-name" class="{ short : $resume.get('commons', 'name').length > 9 }">{ $resume.get('commons', 'name') }</div>
@@ -19,9 +19,9 @@
 				<valuta if={ $resume.get('salary', 'currency') != "1" }>{ $resume.take.salary.currency() }</valuta>
 				<sup>{ $resume.take.salary.worktime() }</sup>
 			</div>
-			<div if={ $resume.get('commons', 'contacts', 'skype').length } class="t-header-string-element">Skype: { $resume.get('commons', 'contacts', 'skype') }</div>
-			<div if={ $resume.get('commons', 'contacts', 'phone').length } class="t-header-string-element">{ $resume.get('commons', 'contacts', 'phone') }</div>
-			<div if={ $resume.get('commons', 'contacts', 'email').length } class="t-header-string-element">{ $resume.get('commons', 'contacts', 'email') }</div>
+			<div if={ $resume.get('commons', 'contacts', 'skype').length } class="t-header-string-element">Skype: <a href="skype:{ $resume.get('commons', 'contacts', 'skype') }">{ $resume.get('commons', 'contacts', 'skype') }</a></div>
+			<div if={ $resume.get('commons', 'contacts', 'phone').length } class="t-header-string-element"><a href="tel:{ $resume.get('commons', 'contacts', 'phone').replace(/[\s|\-|\(|\)]/g, "") }">{ $resume.get('commons', 'contacts', 'phone') }</a></div>
+			<div if={ $resume.get('commons', 'contacts', 'email').length } class="t-header-string-element"><a href="mailto:{ $resume.get('commons', 'contacts', 'email') }">{ $resume.get('commons', 'contacts', 'email') }</a></div>
 			<div class="t-header-string-element">
 				<span if={ !$resume.get('commons', 'birthday', 'hidden') }>{ $resume.take.birthday.date() }</span>
 				<span class="t-gray">({ $resume.take.birthday.age() })</span>
@@ -30,34 +30,44 @@
 		<div if={ $resume.get('post').length } id="t-header-post" class="t-gray">{ $resume.get('post') }</div>
 	</div>
 	<div id="t-container-wrapper">
+		<div if={ $resume.get('tags').length } class="t-container t-container-tags">
+			<div class="t-container-name">{ $i18n("resume.basic.template.Main skills") }</div>
+			<div class="t-container-item">
+				<div class="t-container-dates"></div>
+				<div class="t-container-desc">
+					<div class="t-container-desc-name">
+						<span each={ item in $resume.get('tags') } no-reorder class="t-tag">{ item }</span>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div if={ $resume.get('education', 'items').length } class="t-container t-container-edu">
 			<div class="t-container-name">{ $i18n("resume.basic.template.Education") }</div>
-			<div each={ edu, i in $resume.take.education.items() } class="t-container-item">
+			<div class="t-container-item t-container-item--line">
+				<div class="t-container-dates-title">{ $resume.take.education.level() }</div>
+			</div>
+			<div each={ edu, i in $resume.take.education.items() } no-reorder class="t-container-item">
 				<div class="t-container-dates">
 					<div class="t-container-dates-year t-gray">{ edu.year }</div>
-					<div class="t-container-dates-title">{ $store.education.getTitleById(edu.level) }</div>
 				</div>
-				<div if={ edu.level != 8 } class="t-container-desc">
-					<div class="t-container-desc-title">{ edu.title }</div>
+				<div class="t-container-desc">
+					<div if={ edu.speciality } class="t-container-desc-title">{ edu.title }</div>
+					<div class="t-container-desc-name">{ edu.speciality }</div>
 					<div if={ edu.faculty } class="t-container-desc-name">{ edu.faculty }</div>
-					<div if={ edu.speciality } class="t-container-desc-name">{ $i18n("resume.basic.template.Specialty") } &ndash; { edu.speciality }</div>
-				</div>
-				<div if={ edu.level == 8 } class="t-container-desc">
-					<div class="t-container-desc-title">{ edu.title }</div>
 				</div>
 			</div>
 		</div>
 		<div class="t-container t-container-lang">
 			<div class="t-container-name">{ $i18n("resume.basic.template.Languages") }</div>
-			<div each={ lang, i in $resume.get('languages', 'items') } class="t-container-item">
+			<div each={ lang, i in $resume.get('languages', 'items') } no-reorder class="t-container-item">
 				<div class="t-container-dates">
-					<div class="t-container-dates-title { 't-gray' : lang.title != 'native' && lang.value == '1' }">{ $store.languages.getTitleById(lang.title) }</div>
+					<div class="t-container-dates-title { 't-gray' : lang.title != 'native' && lang.value == 'not' }">{ $store.languages.getTitleById(lang.title) }</div>
 				</div>
 				<div class="t-container-desc">
 					<div if={ lang.title == "native" } class="t-container-desc-title">
 						{ $store.languages.native.getTitleById(lang.value) }
 					</div>
-					<div if={ lang.title != "native" } class="t-container-desc-title { 't-gray' : lang.value == '1' }">
+					<div if={ lang.title != "native" } class="t-container-desc-title { 't-gray' : lang.value == 'not' }">
 						{ $store.languages.select.getTitleById(lang.value) }
 					</div>
 				</div>
@@ -65,7 +75,10 @@
 		</div>
 		<div if={ $resume.get('jobs', 'items').length } class="t-container t-container-job">
 			<div class="t-container-name">{ $i18n("resume.basic.template.Experience") }</div>
-			<div each={ job, i in $resume.take.jobs.items() } class="t-container-item">
+			<div class="t-container-item t-container-item--line">
+				<div class="t-container-dates-title">{ $resume.take.jobs.experience() }</div>
+			</div>
+			<div each={ job, i in $resume.take.jobs.items() } no-reorder class="t-container-item">
 				<div class="t-container-dates">
 					<div class="t-container-dates-company"><span>{ job.title }</span></div>
 					<div class="t-container-dates-city">{ job.city }</div>
@@ -84,6 +97,18 @@
 				</div>
 			</div>
 		</div>
+		<div if={ $resume.get('courses', 'items').length } class="t-container t-container-edu">
+			<div class="t-container-name">{ $i18n("resume.basic.template.Courses") }</div>
+			<div each={ edu, i in $resume.take.courses.items() } no-reorder class="t-container-item">
+				<div class="t-container-dates">
+					<div class="t-container-dates-year t-gray">{ edu.year }</div>
+				</div>
+				<div class="t-container-desc">
+					<div class="t-container-desc-title">{ edu.title }</div>
+					<div class="t-container-desc-name">{ edu.name }</div>
+				</div>
+			</div>
+		</div>
 		<div if={ $resume.get('about').length } class="t-container t-container-about">
 			<div class="t-container-item">
 				<div class="t-container-dates">
@@ -91,6 +116,36 @@
 				</div>
 				<div class="t-container-desc preline">
 				   { $resume.get('about') }
+				</div>
+			</div>
+		</div>
+		<div class="t-container">
+			<div class="t-container-item">
+				<div class="t-container-dates">
+					<div class="t-container-dates-title">{ $i18n("resume.basic.template.Citizenship") }</div>
+				</div>
+				<div class="t-container-desc">
+					<div class="t-container-desc-title">{ $resume.take.citizenship() }</div>
+				</div>
+			</div>
+		</div>
+		<div class="t-container">
+			<div class="t-container-item">
+				<div class="t-container-dates">
+					<div class="t-container-dates-title">{ $i18n("resume.basic.template.Relocation") }</div>
+				</div>
+				<div class="t-container-desc">
+					<div class="t-container-desc-title">{ $resume.take.relocation() }</div>
+				</div>
+			</div>
+		</div>
+		<div class="t-container">
+			<div class="t-container-item">
+				<div class="t-container-dates">
+					<div class="t-container-dates-title">{ $i18n("resume.basic.template.Business trip") }</div>
+				</div>
+				<div class="t-container-desc">
+					<div class="t-container-desc-title">{ $resume.take.businessTrip() }</div>
 				</div>
 			</div>
 		</div>
