--- a/assets/templates/sections/messenger/messenger.html
+++ b/assets/templates/sections/messenger/messenger.html
@@ -29,7 +29,7 @@
         </a>
     </div>
     <div onClick={ onShow } class="messenger__launcher__opener">
-        <div class="messenger__launcher__badge">2</div>
+        <div class="messenger__launcher__badge">R</div>
         <div class="messenger__launcher__opener__button">
             <div class="messenger__launcher__icons">
                 <svg class="messenger__launcher__icon" data-icon="yuap" viewBox="0 0 245 287" version="1.1" xmlns="http://www.w3.org/2000/svg">
