--- a/assets/templates/sections/profile/profileDataContent.html
+++ b/assets/templates/sections/profile/profileDataContent.html
@@ -5,14 +5,14 @@
             <span class="title">Имя</span>
         </div>
         <div class="col-sm-16">
-            <ui-input placeholder="Имя" update="name" cursor={ opts.cursor } size="l" disabled={ opts.cursor.get("name").length }></ui-input>
+            <ui-input placeholder="Имя" update="name" cursor={ opts.cursor } size="l"></ui-input>
         </div>
     </div>
     <div class="row mb-m">
         <div class="hidden-xs col-sm-8 pt-xs pr-m">
             <span class="title">Фамилия</span>
         </div>
-        <div class="col-sm-16">
+        <div class="col-sm-16" data-balloon={ 'Фамилию возможно изменить, обратившись в службу поддержки, указав причину смены.' : opts.cursor.get("surname").length } data-balloon-pos="down" data-balloon-length="large" data-balloon-fontSize="small">
             <ui-input placeholder="Фамилия" update="surname" cursor={ opts.cursor } size="l" disabled={ opts.cursor.get("surname").length }></ui-input>
         </div>
     </div>
