--- a/assets/templates/sections/stat/resumeStat.html
+++ b/assets/templates/sections/stat/resumeStat.html
@@ -138,7 +138,8 @@
                 elem: $$(e.currentTarget),
                 pos: "down-right",
                 offset: {
-                    left: -20
+                    top: 20,
+                    left: -80
                 },
                 isSelect: true,
                 menu: $store.data.getItemsMenu(),
