--- a/assets/css/appResume/basic/templates/template6/_style.scss
+++ b/assets/css/appResume/basic/templates/template6/_style.scss
@@ -1,102 +1,155 @@
 #t6 {
-  font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
-  font-size: 18px;
-  line-height: 22px;
-  color: #2b2b2b;
-  padding: 0 0 110px 120px;
-}
-#t6 .mt-10 {
-  margin-top: -10px;
-}
-#t6 .mt5 {
-  margin-top: 5px;
-}
-#t6 #t-header {
-  position: relative;
-  text-align: left;
-}
-#t6 #t-header-names {
-  padding-top: 100px;
-  font-weight: bold;
-  font-size: 41px;
-  line-height: 44px;
-  letter-spacing: -0.05em;
-  white-space: nowrap;
-  margin-left: -2px;
-  margin-bottom: 40px;
-}
-#t6 #t-header-post {
-  font-size: 24px;
-  line-height: 24px;
-  margin-bottom: 40px;
-}
-#t6 #t-header-salary {
-  font-weight:bold;
-  font:bold 24px/24px 'Roboto';
+    font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    color: #151515;
+    padding: 0 0 110px 120px;
 
-  rub:after {
-      content:"₽";
-  }
+    a {
+        color: #151515;
+        text-decoration:none;
+    }    
 }
+
+#t6 .mt-10 {
+    margin-top: -10px;
+}
+
+#t6 .mt5 {
+    margin-top: 5px;
+}
+
+#t6 #t-header {
+    position: relative;
+    text-align: left;
+    min-height: 240px;
+}
+
+#t6 #t-header-names {
+    padding-top: 100px;
+    font-weight: bold;
+    font-size: 41px;
+    line-height: 44px;
+    letter-spacing: -0.025em;
+    white-space: nowrap;
+    margin-left: -2px;
+    margin-bottom: 40px;
+}
+
+#t6 #t-header-post {
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 40px;
+}
+
+#t6 #t-header-salary {
+    font: bold 24px/24px 'Roboto';
+
+    rub:after {
+        content: "₽";
+    }
+}
+
 #t6 .t-header-salary-currency {
-    display:inline-block;
-    color:#fff;
-    font:bold 15px/25px 'Roboto';
-    background-color:#265cdc;
-    padding:0 9px;
-    height:24px;
-    border-radius:100px;
-    margin-left:5px;
+    display: inline-block;
+    color: #fff;
+    font: bold 15px/25px 'Roboto';
+    background-color: #265cdc;
+    padding: 0 9px;
+    height: 24px;
+    border-radius: 100px;
+    margin-left: 5px;
 }
+
 #t6 #t-container-wrapper {
-  padding: 40px 100px 0 0;
-  clear: both;
+    padding: 60px 100px 0 0;
+    clear: both;
 }
+
 #t6 .t-container-string {
-  width: 100%;
+    width: 100%;
 }
+
 #t6 .cell-email {
-  color:#265cdc;
+    color: #265cdc;
 }
+
 #t6 .t-container-string {
-  margin-bottom:40px;
+    margin-bottom: 40px;
 }
+
 #t6 .t-container-table {
-  display: table;
-  margin-bottom:60px;
+    display: table;
+    margin-bottom: 60px;
 }
+
 #t6 .t-container-string-lang-title {
-  display: inline-block;
-  width: 140px;
+    display: inline-block;
+    width: 140px;
 }
+
 #t6 .t-container-string-left {
-  display: table-cell;
-  width: 50%;
+    display: table-cell;
+    width: 50%;
 }
+
 #t6 .t-container-string-element {
-  display: table;
-  width: 100%;
+    display: table;
+    width: 100%;
+
+    &--first {
+        .cell {
+            padding-top:15px;
+        }
+    }
 }
+
 #t6 .cell {
-  display: table-cell;
-  padding-top: 35px;
+    display: table-cell;
+    padding-top: 35px;
 }
+
 #t6 .cell-name {
-  width: 20%;
-  font-size: 20px;
-  font-weight: bold;
-  letter-spacing: -0.025em;
+    width: 20%;
+    color:#8e939b;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: -0.008em;
 }
+
 #t6 .t-container-string-element div {
-  margin-bottom: 1px;
+    margin-bottom: 1px;
 }
+
 #t6 .t-container-string-left .cell-name {
-  width: 40%;
+    width: 40%;
 }
+
 #t6 .cell-text {
-    line-height:28px;
-    padding-right:20px;
+    line-height: 28px;
+    padding-right: 20px;
+
+    &--line {
+        color:#8e939b;
+        padding-bottom:10px;
+        border-bottom:1px solid #d6d6d6;
+    }
+    .text-blue {
+        color:#265cdc;
+    }
 }
+
+#t6 .t-tag {
+    display:inline-block;
+    color:#666;
+    background-color:#F0F1F2;
+    padding:0 11px;
+    height:35px;
+    line-height:35px;
+    margin:0 6px 6px 0;
+    border-radius:6px;
+}
+
 #t6 .preline {
-    white-space:pre-line;
+    white-space: pre-line;
 }
