--- a/assets/css/appResume/basic/templates/template7/_style.scss
+++ b/assets/css/appResume/basic/templates/template7/_style.scss
@@ -1,170 +1,232 @@
 #t7 {
-  font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
-  font-size: 18px;
-  line-height: 22px;
-  color: #2b2b2b;
-  padding: 0 0 110px 120px;
-}
-#t7 .mt-10 {
-  margin-top: -10px;
-}
-#t7 .mt5 {
-  margin-top: 5px;
-}
-#t7 #t-header {
-  position: relative;
-  text-align: left;
-  min-height:240px;
-}
-#t7 #t-header-names {
-  padding-top: 100px;
-  font-weight: bold;
-  font-size: 41px;
-  line-height: 44px;
-  letter-spacing: -0.05em;
-  white-space: nowrap;
-  margin-left: -2px;
-  margin-bottom: 40px;
-}
-#t7 #t-header-post {
-  font-size: 24px;
-  line-height: 24px;
-  margin-bottom: 40px;
-}
-#t7 #t-header-salary {
-  font:bold 24px/24px 'Roboto';
+    font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    color: #151515;
+    padding: 0 0 110px 120px;
 
-  rub:after {
-      content:"₽";
-  }
+    a {
+        color: #151515;
+        text-decoration:none;
+    }
 }
+
+#t7 .mt-10 {
+    margin-top: -10px;
+}
+
+#t7 .mt5 {
+    margin-top: 5px;
+}
+
+#t7 #t-header {
+    position: relative;
+    text-align: left;
+    min-height: 240px;
+}
+
+#t7 #t-header-names {
+    padding-top: 100px;
+    font-weight: bold;
+    font-size: 41px;
+    line-height: 44px;
+    letter-spacing: -0.025em;
+    white-space: nowrap;
+    margin-left: -2px;
+    margin-bottom: 40px;
+}
+
+#t7 #t-header-post {
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 40px;
+}
+
+#t7 #t-header-salary {
+    font: bold 24px/24px 'Roboto';
+
+    rub:after {
+        content: "₽";
+    }
+}
+
 #t7 .t-header-salary-currency {
-    display:inline-block;
-    color:#fff;
-    font:bold 15px/25px 'Roboto';
-    background-color:#265cdc;
-    padding:0 9px;
-    height:24px;
-    border-radius:100px;
-    margin-left:5px;
+    display: inline-block;
+    color: #fff;
+    font: bold 15px/25px 'Roboto';
+    background-color: #265cdc;
+    padding: 0 9px;
+    height: 24px;
+    border-radius: 100px;
+    margin-left: 5px;
 }
+
 #t7 .t-header-photo {
-  position: absolute;
-  top: 50px;
-  right: 50px;
-  width: 276px;
-  height: 276px;
-  border-radius:50%;
-  cursor:pointer;
-  overflow: hidden;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 276px;
+    height: 276px;
+    border-radius: 50%;
+    cursor: pointer;
+    overflow: hidden;
 }
+
 #t7 .t-header-photo-image {
-  width:276px;
-  height:276px;
-  background-repeat:top center;
-  background-repeat:no-repeat;
-  background-size:cover;
-  border-radius:50%;
-  transition:opacity 0.1s ease;
+    width: 276px;
+    height: 276px;
+    background-repeat: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    transition: opacity 0.1s ease;
 }
+
 .m-no-touch #t7 .t-header-photo:hover .t-header-photo-image {
-  opacity: 0.85;
+    opacity: 0.85;
 }
-#t7 .t-header-photo span,
+
+#t7 .t-header-photo .icon,
+#t7 .t-header-photo span {
+    display: none;
+}
+
 #t7 .t-header-photo .icon {
-  display: none;
+    display: block;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    margin: -64px 0 0 -66px;
+    width: 128px;
+    height: 128px;
+    background: url("/assets/images/ui/ui-upload_white.svg") no-repeat 0 0 / cover;
+    transition: all 0.25s ease;
+    opacity: 0;
+    z-index: 1;
 }
-#t7 .t-header-photo .icon {
-  display: block;
-  position: absolute;
-  top: 65%;
-  left: 50%;
-  margin: -64px 0 0 -66px;
-  width: 128px;
-  height: 128px;
-  background: url(/assets/images/ui/ui-upload_white.svg) no-repeat 0 0 / cover;
-  transition: all 0.25s ease;
-  opacity: 0;
-  z-index: 1;
-}
+
 .m-no-touch #t7 .t-header-photo:hover .icon {
-  top: 50%;
-  opacity: 0.85;
+    top: 50%;
+    opacity: 0.85;
 }
+
 #t7 .t-header-photo.place {
-  border:3px dashed rgba(#265cdc,.8);
+    border: 3px dashed rgba(#265cdc,.8);
 }
+
 #t7 .t-header-photo.place span {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  margin-top: 50px;
-  color: #265cdc;
-  opacity:0.8;
-  font: bold 16px/24px "Gotham", Helvetica;
-  padding: 0 30px;
-  text-align: center;
-  box-sizing: border-box;
-  text-transform:uppercase;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    margin-top: 50px;
+    color: #265cdc;
+    opacity: 0.8;
+    font: bold 16px/24px "Gotham", Helvetica;
+    padding: 0 30px;
+    text-align: center;
+    box-sizing: border-box;
+    text-transform: uppercase;
 }
+
 #t7 .t-header-photo.place .icon {
-  top: 50%;
-  margin-top: -90px;
-  background-image: url(/assets/images/ui/ui-upload.svg);
-  opacity: 0.85;
-  transition: none;
+    top: 50%;
+    margin-top: -90px;
+    background-image: url("/assets/images/ui/ui-upload.svg");
+    opacity: 0.85;
+    transition: none;
 }
+
 #t7 #t-container-wrapper {
-  padding: 60px 100px 0 0;
-  clear: both;
+    padding: 60px 100px 0 0;
+    clear: both;
 }
+
 #t7 .t-container-string {
-  width: 100%;
+    width: 100%;
 }
+
 #t7 .cell-email {
-  color:#265cdc;
+    color: #265cdc;
 }
+
 #t7 .t-container-string {
-  margin-bottom:40px;
+    margin-bottom: 40px;
 }
+
 #t7 .t-container-table {
-  display: table;
-  margin-bottom:60px;
+    display: table;
+    margin-bottom: 60px;
 }
+
 #t7 .t-container-string-lang-title {
-  display: inline-block;
-  width: 140px;
+    display: inline-block;
+    width: 140px;
 }
+
 #t7 .t-container-string-left {
-  display: table-cell;
-  width: 50%;
+    display: table-cell;
+    width: 50%;
 }
+
 #t7 .t-container-string-element {
-  display: table;
-  width: 100%;
+    display: table;
+    width: 100%;
+
+    &--first {
+        .cell {
+            padding-top:15px;
+        }
+    }
 }
+
 #t7 .cell {
-  display: table-cell;
-  padding-top: 35px;
+    display: table-cell;
+    padding-top: 35px;
 }
+
 #t7 .cell-name {
-  width: 20%;
-  font-size: 20px;
-  font-weight: bold;
-  letter-spacing: -0.025em;
+    width: 20%;
+    color:#8e939b;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: -0.008em;
 }
+
 #t7 .t-container-string-element div {
-  margin-bottom: 1px;
+    margin-bottom: 1px;
 }
+
 #t7 .t-container-string-left .cell-name {
-  width: 40%;
+    width: 40%;
 }
+
 #t7 .cell-text {
-    line-height:28px;
-    padding-right:20px;
+    line-height: 28px;
+    padding-right: 20px;
+
+    &--line {
+        color:#8e939b;
+        padding-bottom:10px;
+        border-bottom:1px solid #d6d6d6;
+    }
+    .text-blue {
+        color:#265cdc;
+    }
 }
+
+#t7 .t-tag {
+    display:inline-block;
+    color:#666;
+    background-color:#F0F1F2;
+    padding:0 11px;
+    height:35px;
+    line-height:35px;
+    margin:0 6px 6px 0;
+    border-radius:6px;
+}
+
 #t7 .preline {
-    white-space:pre-line;
+    white-space: pre-line;
 }
