--- a/assets/css/appResume/basic/templates/template8/_style.scss
+++ b/assets/css/appResume/basic/templates/template8/_style.scss
@@ -1,322 +1,413 @@
 #t8 {
-  font-family: "HelveticaNeue", Helvetica, sans-serif;
-  font-size: 20px;
-  line-height: 28px;
-  color: #7f7f7f;
-  position: relative;
+    font-family: "HelveticaNeue", Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 28px;
+    color: #7f7f7f;
+    position: relative;
+
+    a {
+        color:#7f7f7f;
+        text-decoration:none;
+
+        &[href^="mailto"]{
+            color:#265cdc;
+        }
+    }
 }
+
 #t8 #t-circle-bg {
-  position: absolute;
-  top: 183px;
-  left: 140px;
-  width: 1348px;
-  height: 1148px;
-  background-color:#F5F0F9;
-  border-radius:50%;
-  // background: url(/assets/css/appResume/basic/templates/template8/img/circle.png) no-repeat;
+    position: absolute;
+    top: 183px;
+    left: 140px;
+    width: 1348px;
+    height: 1148px;
+    background-color: #F5F0F9;
+    border-radius: 50%;
+    // background: url(/assets/css/appResume/basic/templates/template8/img/circle.png) no-repeat;
 }
+
 #t8 .mt-10 {
-  margin-top: -10px;
+    margin-top: -10px;
 }
+
 #t8 .mt5 {
-  margin-top: 5px;
+    margin-top: 5px;
 }
-#t8 .t-gray,
-#t8 .t-container-item .t-container-item-value.t-gray {
-  color: #7f7f7f;
+
+#t8 .t-container-item .t-container-item-value.t-gray,
+#t8 .t-gray {
+    color: #7f7f7f;
 }
+
 #t8 #t-header {
-  position: relative;
-  padding: 48px 80px 53px 392px;
-  min-height: 280px;
-  background: url(/assets/css/appResume/basic/templates/template8/img/points-h.png) bottom left repeat-x;
+    position: relative;
+    padding: 48px 0 53px 392px;
+    min-height: 280px;
+    background: url("/assets/css/appResume/basic/templates/template8/img/points-h.png") bottom left repeat-x;
 }
+
 #t8 #t-header-names {
-  color: #674a9a;
-  font: 83px/83px "Bebas";
-  letter-spacing: -0.022em;
-  margin-bottom: 5px;
+    color: #674a9a;
+    font: 83px/83px "Bebas";
+    letter-spacing: -0.022em;
+    margin-bottom: 5px;
 
-  &[data-long="true"]{
-      font-size:76px;
-      line-height:83px;
-  }
+    &[data-long="true"] {
+        font-size: 76px;
+        line-height: 83px;
+    }
 }
+
 #t8 #t-header-names span {
-  color: #d3c0de;
+    color: #d3c0de;
 }
+
 #t8 #t-header-post {
-  position:relative;
-  color: #9480b8;
-  font: 36px/40px "Proxima Nova";
-  letter-spacing: -0.025em;
-  text-transform: uppercase;
-  padding-bottom: 30px;
-  margin-bottom: 5px;
+    position: relative;
+    color: #9480b8;
+    font: 36px/40px "Proxima Nova";
+    letter-spacing: -0.025em;
+    text-transform: uppercase;
+    padding-bottom: 30px;
+    padding-right: 35px;
+    margin-bottom: 5px;
 
-  &:after {
-      content:"";
-      position:absolute;
-      bottom:0;
-      left:0;
-      width:120%;
-      height:6px;
-      background: url(/assets/css/appResume/basic/templates/template8/img/points-h.png) bottom left repeat-x;
-  }
+    &:after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 120%;
+        height: 6px;
+        background: url("/assets/css/appResume/basic/templates/template8/img/points-h.png") bottom left repeat-x;
+    }
 }
+
 #t8 #t-header-salary {
-  position: absolute;
-  top: 25px;
-  right: 25px;
-  font: 400 29px/30px "Open Sans";
-  font-style: italic;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    font: 400 29px/30px "Open Sans";
+    font-style: italic;
 
-  rub:after {
-      content:"₽";
-      display:inline-block;
-      font:400 29px/30px 'Roboto';
-      transform:skewX(-9deg);
-      -webkit-transform:skewX(-9deg);
-  }
+    rub:after {
+        content: "₽";
+        display: inline-block;
+        font: 400 29px/30px 'Roboto';
+        transform: skewX(-9deg);
+        -webkit-transform: skewX(-9deg);
+    }
 }
+
 #t8 .t-header-salary-currency {
-    display:inline-block;
-    color:#fff;
-    font:bold 15px/25px 'Roboto';
-    background-color:#674a9a;
-    padding:0 9px;
-    height:24px;
-    border-radius:100px;
-    margin-left:5px;
+    display: inline-block;
+    color: #fff;
+    font: bold 15px/25px 'Roboto';
+    background-color: #674a9a;
+    padding: 0 9px;
+    height: 24px;
+    border-radius: 100px;
+    margin-left: 5px;
 }
+
 #t8 #t-header-string {
-  display: block;
-  font: 22px/26px "Proxima Nova";
-  letter-spacing: -0.015em;
+    display: block;
+    font: 22px/26px "Proxima Nova";
+    letter-spacing: -0.015em;
 }
+
 #t8 .t-header-string-container {
-  display: table;
-  width: 100%;
+    display: table;
+    width: 100%;
 }
+
 #t8 .t-header-string-element {
-  display: table-cell;
-  width: 50%;
-  padding-top: 25px;
-  white-space: nowrap;
+    display: inline-block;
+    width: 30%;
+    padding-top: 25px;
+    white-space: nowrap;
+
+    &.w40p {
+        width: 40%;
+    }
+    em,
+    a {
+        display:inline-block;
+        max-width:70%;
+        overflow:hidden;
+        font-style:normal;
+        text-overflow:ellipsis;
+        vertical-align:bottom;
+    }
 }
+
 #t8 .t-header-string-element span {
-  color: #674a9a;
-  font-size: 22px;
-  padding-right:10px;
-  font-weight:bold;
+    color: #674a9a;
+    font-size: 22px;
+    padding-right: 10px;
+    font-weight: bold;
 }
+
 #t8 .t-header-photo {
-  position: absolute;
-  top: 40px;
-  left: 50px;
-  width: 276px;
-  height: 276px;
-  border-radius: 50%;
-  overflow: hidden;
+    position: absolute;
+    top: 40px;
+    left: 50px;
+    width: 276px;
+    height: 276px;
+    border-radius: 50%;
+    overflow: hidden;
 }
+
 #t8 .t-header-photo-image {
-  width:276px;
-  height:276px;
-  background-repeat:top center;
-  background-repeat:no-repeat;
-  background-size:cover;
-  border-radius:50%;
-  transition:opacity 0.1s ease;
+    width: 276px;
+    height: 276px;
+    background-repeat: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    transition: opacity 0.1s ease;
 }
+
 .m-no-touch #t8 .t-header-photo:hover .t-header-photo-image {
-  opacity: 0.85;
+    opacity: 0.85;
 }
-#t8 .t-header-photo span,
+
+#t8 .t-header-photo .icon,
+#t8 .t-header-photo span {
+    display: none;
+}
+
 #t8 .t-header-photo .icon {
-  display: none;
+    display: block;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    margin: -64px 0 0 -66px;
+    width: 128px;
+    height: 128px;
+    background: url("/assets/images/ui/ui-upload_white.svg") no-repeat 0 0 / cover;
+    transition: all 0.25s ease;
+    opacity: 0;
+    z-index: 1;
 }
-#t8 .t-header-photo .icon {
-  display: block;
-  position: absolute;
-  top: 65%;
-  left: 50%;
-  margin: -64px 0 0 -66px;
-  width: 128px;
-  height: 128px;
-  background: url(/assets/images/ui/ui-upload_white.svg) no-repeat 0 0 / cover;
-  transition: all 0.25s ease;
-  opacity: 0;
-  z-index: 1;
-}
+
 .m-no-touch #t8 .t-header-photo:hover .icon {
-  top: 50%;
-  opacity: 0.85;
+    top: 50%;
+    opacity: 0.85;
 }
+
 #t8 .t-header-photo.place {
-  border:3px dashed rgba(#265cdc,.8);
+    border: 3px dashed rgba(#265cdc,.8);
 }
+
 #t8 .t-header-photo.place span {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  margin-top: 50px;
-  color: #265cdc;
-  opacity:0.8;
-  font: bold 16px/24px "Gotham", Helvetica;
-  padding: 0 30px;
-  text-align: center;
-  box-sizing: border-box;
-  text-transform:uppercase;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    margin-top: 50px;
+    color: #265cdc;
+    opacity: 0.8;
+    font: bold 16px/24px "Gotham", Helvetica;
+    padding: 0 30px;
+    text-align: center;
+    box-sizing: border-box;
+    text-transform: uppercase;
 }
+
 #t8 .t-header-photo.place .icon {
-  top: 50%;
-  margin-top: -90px;
-  background-image: url(/assets/images/ui/ui-upload.svg);
-  opacity: 0.85;
-  transition: none;
+    top: 50%;
+    margin-top: -90px;
+    background-image: url("/assets/images/ui/ui-upload.svg");
+    opacity: 0.85;
+    transition: none;
 }
+
 #t8 .t-header-photo .img-shadow {
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  width: 274px;
-  height: 274px;
-  box-shadow: 0 0 21px rgba(31,35,37,.15) inset;
-  border-radius: 50%;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    width: 274px;
+    height: 274px;
+    box-shadow: 0 0 21px rgba(31,35,37,.15) inset;
+    border-radius: 50%;
 }
+
 #t8 h3 {
-  color: #674a9a;
-  font: 46px/48px "Bebas";
-  letter-spacing: -0.022em;
-  margin-bottom: 12px;
+    color: #674a9a;
+    font: 46px/48px "Bebas";
+    letter-spacing: -0.022em;
+    margin-bottom: 12px;
 }
+
 #t8 h3 span {
-  color: #d3c0de;
+    color: #d3c0de;
 }
+
 #t8 #t-container-wrapper {
-  display: table;
-  position: relative;
+    display: table;
+    position: relative;
 }
+
 #t8 #t-column-left {
-  display: table-cell;
-  width: 380px;
-  background: url(/assets/css/appResume/basic/templates/template8/img/points-v.png) top right repeat-y;
-  vertical-align: top;
+    display: table-cell;
+    width: 380px;
+    background: url("/assets/css/appResume/basic/templates/template8/img/points-v.png") top right repeat-y;
+    vertical-align: top;
 }
+
 #t8 #t-container-content {
-  display: table-cell;
-  vertical-align: top;
-  padding-left: 38px;
+    display: table-cell;
+    vertical-align: top;
+    padding-left: 38px;
 }
+
 #t8 .t-container {
-  margin-top: 25px;
-  color: #424244;
+    margin-top: 25px;
+    color: #424244;
 }
+
+#t8 .t-container-tags .t-container-desc {
+    padding-right:0;
+}
+
 #t8 .t-container-about {
-  padding: 0 30px 20px 35px;
-  font-size: 18px;
-  line-height:30px;
+    padding: 0 30px 20px 35px;
+    font-size: 18px;
+    line-height: 30px;
 }
+
 #t8 .t-container-about h3 span {
-  display: block;
+    display: block;
 }
+
 #t8 .t-container-lang {
-  padding: 31px 0 75px 35px;
-  background: url(/assets/css/appResume/basic/templates/template8/img/points-h.png) top left repeat-x;
-  margin-right: 15px;
+    padding: 31px 0 75px 35px;
+    background: url("/assets/css/appResume/basic/templates/template8/img/points-h.png") top left repeat-x;
+    margin-right: 15px;
 }
+
 #t8 .t-container-lang h3 {
-  margin-bottom: 28px;
+    margin-bottom: 28px;
 }
+
 #t8 .t-container-lang .t-container-item {
-  display: table;
-  width: 100%;
+    display: table;
+    width: 100%;
 }
+
 #t8 .t-container-lang .t-container-item-title,
 #t8 .t-container-lang .t-container-item-value {
-  display: table-cell;
-  vertical-align: top;
+    display: table-cell;
+    vertical-align: top;
 }
+
 #t8 .t-container-lang .t-container-item-title {
-  color: #7f7f7f;
-  font: 18px/20px "HelveticaNeue";
-  letter-spacing: -0.02em;
-  width: 48.5%;
+    color: #7f7f7f;
+    font: 18px/20px "HelveticaNeue";
+    letter-spacing: -0.02em;
+    width: 48.5%;
 }
+
 #t8 .t-container-lang .t-container-item-value {
-  color: #674a9a;
-  font: 22px/22px "Roboto Condensed";
-  letter-spacing: -0.02em;
+    color: #674a9a;
+    font: 22px/22px "Roboto Condensed";
+    letter-spacing: -0.02em;
 }
+
 #t8 .t-container-edu .t-container-desc-name {
-  padding-left:0px;
+    padding-left: 0;
 }
+
 #t8 .t-container-edu {
-  margin-bottom: 35px;
+    margin-bottom: 35px;
 }
+
 #t8 .t-container-job {
-  background: url(/assets/css/appResume/basic/templates/template8/img/points-h.png) top left repeat-x;
-  margin-left: -26px;
-  padding: 30px 0 100px 26px;
+    background: url("/assets/css/appResume/basic/templates/template8/img/points-h.png") top left repeat-x;
+    margin-left: -26px;
+    padding: 30px 0 100px 26px;
 }
+
 #t8 .t-container-job .t-container-desc {
-  padding-right: 120px;
+    padding-right: 120px;
 }
+
 #t8 .t-container-job .t-container-desc-title {
-  font-size: 24px;
-  line-height: 26px;
-  margin-bottom:-1px;
+    font-size: 24px;
+    line-height: 26px;
+    margin-bottom: -1px;
 }
+
 #t8 .t-container-item {
-  position: relative;
-  margin: 0 30px 40px 0;
+    position: relative;
+    margin: 0 30px 40px 0;
 }
+
 #t8 .t-container-dates {
-  position: absolute;
-  top: 0;
-  right: 0;
-  color: #674a9a;
-  text-align: right;
-  width: 150px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #674a9a;
+    text-align: right;
+    width: 150px;
 }
+
 #t8 .t-container-dates-year {
-  font: 30px/30px "Bebas";
-  margin-bottom:8px;
+    font: 30px/30px "Bebas";
+    margin-bottom: 8px;
 }
+
 #t8 .t-container-dates-title {
-  font: 20px/20px "Proxima Nova";
-  letter-spacing: -0.01em;
+    font: 20px/20px "Proxima Nova";
+    letter-spacing: -0.01em;
 }
+
 #t8 .t-container-desc {
-  padding-right: 130px;
-  min-height: 55px;
+    padding-right: 130px;
+    min-height: 55px;
 }
+
 #t8 .t-container-desc-title {
-  color: #6d6d6d;
-  font: 22px/26px "Roboto Condensed";
-  letter-spacing: -0.015em;
-  margin-bottom:3px;
+    color: #6d6d6d;
+    font: 22px/26px "Roboto Condensed";
+    letter-spacing: -0.015em;
+    margin-bottom: 3px;
 }
+
 #t8 .t-container-desc-name {
-  color: #6d6d6d;
-  font: 20px/22px "Proxima Nova";
-  letter-spacing: -0.015em;
-  padding-top:7px;
-  padding-left:10px;
+    color: #6d6d6d;
+    font: 20px/22px "Proxima Nova";
+    letter-spacing: -0.015em;
+    padding-top: 7px;
 }
+
 #t8 .t-container-desc-name span {
-  display: block;
-  color: #674a9a;
-  letter-spacing: -0.02em;
-  padding-top:6px;
-  font-weight:bold;
+    display: block;
+    color: #674a9a;
+    letter-spacing: -0.02em;
+    padding-top: 6px;
+    font-weight: bold;
 }
+
 #t8 .t-container-desc-text {
-  margin-top:10px;
-  font: 18px/30px "HelveticaNeue";
+    margin-top: 10px;
+    font: 18px/30px "HelveticaNeue";
 }
+
+#t8 .t-tag {
+    display:inline-block;
+    color:#fff;
+    background-color:rgba(#674a9a,.6);
+    padding:0 11px;
+    height:35px;
+    font-size:18px;
+    line-height:35px;
+    margin:0 8px 8px 0;
+    border-radius:6px;
+}
+
 #t8 .preline {
-    white-space:pre-line;
+    white-space: pre-line;
 }
