--- a/assets/css/appResume/premium/sections/menu/_sections.scss
+++ b/assets/css/appResume/premium/sections/menu/_sections.scss
@@ -4,7 +4,7 @@
         @include accelerate();
         @extend .pos-abs;
         @extend .fontFamily-helvetica;
-        @extend .fontSize-18;
+        font-size:18px;
         @extend .overflow-hidden;
         @extend .zIndex-1;
 
@@ -39,7 +39,7 @@
             @extend .h55;
             @extend .fontWeight-bold;
             @extend .fontFamily-gotham;
-            @extend .fontSize-18;
+            font-size:18px;
             @extend .letterSpacing--m;
             @extend .text-uppercase;
             @extend .c-primary;
@@ -54,12 +54,7 @@
             @extend .opacity-40;
         }
         .title {
-            &:not(.black){
-                @extend .c-primary;
-            }
-            &.black {
-                @extend .c-blackLight;
-            }
+            @extend .c-blackLight;
         }
         .input-title {
             @extend .c-primary;
