--- a/assets/css/sections/list/_resumePreview.scss
+++ b/assets/css/sections/list/_resumePreview.scss
@@ -1,14 +1,21 @@
 .resume__preview {
     @extend .display-block;
     @extend .pos-rel;
-    margin:1.64vw auto 2.34vw;
-    width:95.15vw;
     @extend .bg-white;
     @extend .cursor-default;
     @extend .overflow-hidden;
     @extend .text-left;
     box-shadow:0 20px 25px rgba(31,35,37,.3);
 
+    .d-no-mobile & {
+        margin-top:1.64vw;
+        @extend .centered;
+        width:1218px;
+    }
+    .d-mobile & {
+        margin:1.64vw auto 2.34vw;
+        width:95.15vw;
+    }
     .d-phone & {
         margin-top:2.34vw;
         min-height:96.7vh;
