--- a/assets/css/ui/basic/_input.scss
+++ b/assets/css/ui/basic/_input.scss
@@ -325,7 +325,7 @@
             @extend .letterSpacing-0;
             border-bottom:1px solid $smokeLight;
 
-            .m-no-touch &:hover,
+            &:hover,
             &[data-active="true"] {
                 @extend .c-black;
                 background-color:rgba($blueLight,.15);
