--- a/assets/templates/appResume/premium/components/contactsMore.html
+++ b/assets/templates/appResume/premium/components/contactsMore.html
@@ -4,11 +4,11 @@
     <div class="pos-rel minH-100p p-m xs-p0">
         <btn-editable if={ $State.get('mode') === "editing" } data="true"></btn-editable>
         <div onClick={ openEditable } onUpdate="none">
-            <div class="hidden-xs opacity-70 f-primary fontSize-20 fontWeight-bold mb-xs">{ $i18n("resume.premium.template.Сitizenship") }</div>
-            <div class="hidden-xs f-primary fontSize-30 fontWeight-8 mb-l">{ $i18n("resume.premium.template.Relocation") }</div>
+            <div class="hidden-xs opacity-70 f-primary fontSize-20 fontWeight-bold mb-xs">{ $i18n("resume.premium.template.Citizenship") }</div>
+            <div class="hidden-xs f-primary fontSize-30 fontWeight-8 mb-l">{ $resume.lang == 'en' ?  $i18n("resume.premium.template.Relocation") : $i18n("resume.premium.template.Business trip, relocation") }</div>
             <div class="pt25 xs-pt0">
                 <div class="w100p flex-column-left-center { app.device.isPhone ? 'mb-l' : 'h80' } headline-icons">
-                    <div class="c-header f-primary" data-scrollin-icon>{ $i18n("resume.premium.template.Сitizenship") }</div>
+                    <div class="c-header f-primary" data-scrollin-icon>{ $i18n("resume.premium.template.Citizenship") }</div>
                     <div class="c-text" data-scrollin-icon="\{'stagger':40\}">
                         { $store.country.getTitleById($resume.commons.citizenship) }
                     </div>
