--- a/views/private.html
+++ b/views/private.html
@@ -27,7 +27,7 @@
 	<meta name="google" content="notranslate" />
     <link rel="manifest" href="/manifest.json">
     <link id="styles" rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/appResume/basic/templates/style.view.css">
+    <link rel="stylesheet" href="/assets/css/appResume/basic/templates/style{% if isMobile %}.view{% endif %}.css">
 </head>
 <body class="appLoading">
 
@@ -48,7 +48,9 @@
     <script src="/assets/js/templates.ui.js"></script>
     <script src="/assets/js/templates.sections.js"></script>
 
-    <script src="/assets/templates/appResume/basic/templates/template7.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/basic/components/jobs.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/stat/resumeStat.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/resume/resumeSection.html" type="riot/tag"></script>
 
     <script src="/assets/js/commons.js"></script>
     <script src="/assets/js/plugins.js"></script>
@@ -56,6 +58,7 @@
     <!--/ JS components (store) /-->
     <script src="/assets/js/components/tutorial/welcome.js"></script>
     <script src="/assets/js/components/tutorial/resume/free/interface.js"></script>
+    <script src="/assets/js/components/i18n/resume/basic/template/ru.js"></script>
     <script src="/assets/js/store/account.js"></script>
     <script src="/assets/js/store/data.js"></script>
     <script src="/assets/js/store/inbox.js"></script>
